bases/apps/deluge/deluge-ovpn-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-openvpn
  namespace: deluge
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge-openvpn
  template:
    metadata:
      labels:
        app: deluge-openvpn
    spec:
      volumes:
        - name: openvpn-config
          secret:
            secretName: openvpn-config
            optional: false
        - name: openvpn-rw
          emptyDir: {}
        - name: deluge-config
          persistentVolumeClaim:
            claimName: deluge-config
        - name: nfs-downloads
          persistentVolumeClaim:
            claimName: deluge-downloads-nfs
      containers:
      - name: deluge-openvpn
        image: binhex/arch-delugevpn:2.1.1-4-01
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: openvpn-rw
          mountPath: /config/openvpn
        - name: deluge-config
          mountPath: /config
        - mountPath: /downloads
          name: nfs-downloads
        resources:
          requests:
            memory: "128Mi"
            cpu: "25m"
          limits:
            memory: "500Mi"
            cpu: "250m"
